# Async-Runtime-Engine

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CLUADE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_client.cpp  results.md  run_benchmarks.sh  server_async_engine.cpp  server_async_engine_fixed.cpp  server_coroutine.cpp  server_epoll.cpp  server_thread_per_connection.cpp
docs/: architecture.md  contributing.md
examples/: CMakeLists.txt  echo_server.cpp
include/: CMakeLists.txt
include/async_runtime/: io_context.hpp  runtime.hpp  scheduler.hpp  sender.hpp
src/: CMakeLists.txt  io_uring_ctx.cpp  runtime.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_io_uring.cpp  test_sockets.cpp  test_thread_pool.cpp
